--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: erosta_loans
+name: erosta_loan
 description: A new Flutter project.
 
 publish_to: 'none'
@@ -38,7 +38,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_spinkit: ^5.1.0
   shimmer: ^2.0.0
-  package_info_plus: ^4.0.2
+  package_info_plus: 3.1.2
   octo_image: ^2.0.0
   bottom_navy_bar: ^6.0.0
   simple_animations: ^4.2.0
@@ -67,6 +67,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
 
 flutter:
   uses-material-design: true
@@ -98,3 +99,6 @@ flutter:
           weight: 600
         - asset: assets/fonts/mulish/Mulish-Bold.ttf
           weight: 700
+
+dependency_overrides:
+  file_picker: 5.2.6
